chore: extend docs

--- a/content/docs/introduction/installation/docker.mdx
+++ b/content/docs/introduction/installation/docker.mdx
@@ -4,8 +4,6 @@ description: Run Sharkord using Docker.
 icon: Container
 ---
 
-# Docker Installation
-
 Run Sharkord in Docker with HTTP and RTC ports mapped:
 
 ```bash
@@ -19,3 +17,5 @@ docker run \
 ```
 
 Then open `http://localhost:4991`.
+
+See [HTTPS Setup](/docs/https/caddy) guide for securing your Sharkord instance with HTTPS, which is required for streaming features.
