--- a/content/docs/introduction/installation/linux.mdx
+++ b/content/docs/introduction/installation/linux.mdx
@@ -4,8 +4,6 @@ description: Run Sharkord server on Linux.
 icon: MonitorCog
 ---
 
-# Linux Installation
-
 Download the latest Linux x64 binary and run it:
 
 ```bash
@@ -17,3 +15,5 @@ chmod +x sharkord
 Then open `http://localhost:4991` in your browser.
 
 If hosted remotely, use your server IP or domain instead of `localhost`.
+
+See [HTTPS Setup](/docs/https/caddy) guide for securing your Sharkord instance with HTTPS, which is required for streaming features.
