--- a/content/docs/introduction/quick-start.mdx
+++ b/content/docs/introduction/quick-start.mdx
@@ -9,15 +9,13 @@ icon: Rocket
   changes.
 </Alert>
 
-# Quick Start
-
 Sharkord ships as a standalone binary that includes both server and client.
 
 1. Download the latest release for your platform from [GitHub Releases](https://github.com/sharkord/sharkord/releases).
 2. Run Sharkord ([Linux](/docs/introduction/installation/linux), [Windows](/docs/introduction/installation/windows), [macOS](/docs/introduction/installation/macos)).
 3. Open `http://localhost:4991` in your browser.
 
-## First Launch
+### First Launch
 
 On first launch, Sharkord generates an owner access token and prints it in the server console.
 
