--- a/content/docs/introduction/what-is-sharkord.mdx
+++ b/content/docs/introduction/what-is-sharkord.mdx
@@ -4,13 +4,11 @@ description: Overview of Sharkord and its goals.
 icon: Info
 ---
 
-# What is Sharkord?
-
 Sharkord is a self-hosted communication platform designed to provide core Discord-like features on your own infrastructure. It shares the philosophy of Teamspeak but with a clean interface and a focus on ease of use.
 
 You host voice channels, text chat, and file sharing while keeping full ownership of data and operational control.
 
-## Core Principles
+### Core Principles
 
 - Self-hosted
 - Lightweight
@@ -20,6 +18,6 @@ You host voice channels, text chat, and file sharing while keeping full ownershi
 - No paywalls or premium features
 - Easy to deploy
 
-## Live Demo
+### Live Demo
 
 Try Sharkord at [demo.sharkord.com](https://demo.sharkord.com).
