--- a/content/docs/configuration.mdx
+++ b/content/docs/configuration.mdx
@@ -4,18 +4,34 @@ description: Configure Sharkord using config.ini.
 icon: Settings
 ---
 
-# Configuration
-
 On first run, Sharkord creates a config file at `~/.config/sharkord/config.ini`.
 
 Update this file to customize runtime behavior.
 
-## Options
+### Options
 
-| Field        | Default | Description                                         |
-| ------------ | ------- | --------------------------------------------------- |
-| `port`       | `4991`  | HTTP and WebSocket listening port                   |
-| `debug`      | `false` | Enables verbose debug logging                       |
-| `rtcMinPort` | `40000` | Minimum WebRTC media port                           |
-| `rtcMaxPort` | `40020` | Maximum WebRTC media port                           |
-| `autoupdate` | `false` | Enables automatic updates. Not available in Docker. |
+| Field                                          | Default | Description                                                                                       |
+| ---------------------------------------------- | ------- | ------------------------------------------------------------------------------------------------- |
+| `port`                                         | `4991`  | HTTP and WebSocket listening port                                                                 |
+| `debug`                                        | `false` | Enables verbose debug logging                                                                     |
+| `webRtc.port`                                  | `40000` | Port where the WebRTC server listens                                                              |
+| `webRtc.announcedAddress`                      |         | Optional public address for WebRTC server. If not set, the server will use the public IP address. |
+| `rateLimiters.sendAndEditMessages.maxRequests` | `15`    | Max messages sent/edited per window per user before being rate limited                            |
+| `rateLimiters.sendAndEditMessages.windowMs`    | `60000` | Time window for rate limiting in milliseconds                                                     |
+| `rateLimiters.joinVoiceChannel.maxRequests`    | `20`    | Max voice channel joins per window per user before being rate limited                             |
+| `rateLimiters.joinVoiceChannel.windowMs`       | `60000` | Time window for rate limiting in milliseconds                                                     |
+| `rateLimiters.joinServer.maxRequests`          | `5`     | Max server joins per window per user before being rate limited                                    |
+| `rateLimiters.joinServer.windowMs`             | `60000` | Time window for rate limiting in milliseconds                                                     |
+| `autoupdate`                                   | `false` | Enables automatic updates. Not available in Docker.                                               |
+
+### Environment Variables
+
+You can override some configuration options using environment variables. This is especially useful when running Sharkord in a containerized environment like Docker.
+
+| Variable Name                       | Description                                                     |
+| ----------------------------------- | --------------------------------------------------------------- |
+| `SHARKORD_PORT`                     | Overrides the `port` option in `config.ini`.                    |
+| `SHARKORD_DEBUG`                    | Overrides the `debug` option in `config.ini`.                   |
+| `SHARKORD_WEBRTC_PORT`              | Overrides the `webRtc.port` option in `config.ini`.             |
+| `SHARKORD_WEBRTC_ANNOUNCED_ADDRESS` | Overrides the `webRtc.announcedAddress` option in `config.ini`. |
+| `SHARKORD_AUTOUPDATE`               | Overrides the `autoupdate` option in `config.ini`.              |
