fix: linux data dir

--- a/content/docs/data-dir.mdx
+++ b/content/docs/data-dir.mdx
@@ -8,7 +8,7 @@ Sharkord stores its data in a directory. This includes configuration files, logs
 
 ### Linux
 
-`~/.local/share/sharkord`
+`~/.config/sharkord`
 
 ### Windows
 
