chore: update docs

--- a/content/docs/troubleshooting.mdx
+++ b/content/docs/troubleshooting.mdx
@@ -12,3 +12,8 @@ icon: Bug
     - have configured the correct `rtcMinPort` and `rtcMaxPort` in your `config.ini` and opened those ports in your firewall/router for UDP traffic.
 
   </AccordionItem>
+
+    <AccordionItem title="I keep getting disconnected from the server">
+    This is most likely a network issue. Please read [https://github.com/Sharkord/sharkord/issues/46](https://github.com/Sharkord/sharkord/issues/46) for more details and possible solutions.
+
+  </AccordionItem>
