--- a/content/docs/plugins/installation.mdx
+++ b/content/docs/plugins/installation.mdx
@@ -4,8 +4,6 @@ description: Add a compiled plugin to your Sharkord instance.
 icon: ShieldAlert
 ---
 
-# Install and Enable Plugins
-
 After compiling your plugin, install it into your Sharkord data directory.
 
 <Alert type="attention" title="Security Risk">
@@ -13,7 +11,7 @@ After compiling your plugin, install it into your Sharkord data directory.
   prefer Docker isolation.
 </Alert>
 
-## Installation Steps
+### Installation Steps
 
 1. Open your Sharkord data directory (usually `~/.config/sharkord`).
 2. Create a `plugins` folder if it does not exist.
@@ -23,7 +21,7 @@ After compiling your plugin, install it into your Sharkord data directory.
 6. Go to the plugins tab and the plugin should be listed there. Click **Enable** to activate it.
 
 
-## Example Plugins
+### Example Plugins
 
 - [Sharkord Music Bot](https://github.com/diogomartino/sharkord-music-bot) - Adds music playback in voice channels using YouTube.
 - [Sharkord IPTV](https://github.com/diogomartino/sharkord-iptv) - Streams IPTV channels in voice channels.
