chore: update docs

--- a/content/docs/troubleshooting.mdx
+++ b/content/docs/troubleshooting.mdx
@@ -13,7 +13,9 @@ icon: Bug
 
   </AccordionItem>
 
-    <AccordionItem title="I keep getting disconnected from the server">
-    This is most likely a network issue. Please read [https://github.com/Sharkord/sharkord/issues/46](https://github.com/Sharkord/sharkord/issues/46) for more details and possible solutions.
+    <AccordionItem title="I keep getting disconnected from the server (code 1006)">
+    This is most likely a network issue. Please read the following issues for possible solutions:
+    - [https://github.com/Sharkord/sharkord/issues/46](https://github.com/Sharkord/sharkord/issues/46)
+    - [https://github.com/Sharkord/sharkord/issues/289](https://github.com/Sharkord/sharkord/issues/289)
 
   </AccordionItem>
