--- a/content/docs/troubleshooting.mdx
+++ b/content/docs/troubleshooting.mdx
@@ -4,16 +4,16 @@ description: Troubleshoot common issues with Sharkord.
 icon: Bug
 ---
 
-  <AccordionItem title="Voice and video not working">
-    Make sure you:
+<AccordionItem title="Voice and video not working">
+Make sure you:
+- are in a secure context (HTTPS or http://localhost)
+- have allowed microphone and camera permissions in your browser
+- have configured the correct `webRtc.port` in your `config.ini` and opened those ports in your firewall/router for UDP traffic. In some setups, you might also need to set `webRtc.announcedAddress` to your public IP address or domain name, especially if you're behind a NAT.
 
-    - are in a secure context (HTTPS or http://localhost)
-    - have allowed microphone and camera permissions in your browser
-    - have configured the correct `rtcMinPort` and `rtcMaxPort` in your `config.ini` and opened those ports in your firewall/router for UDP traffic.
+</AccordionItem>
 
-  </AccordionItem>
-
-    <AccordionItem title="I keep getting disconnected from the server">
-    This is most likely a network issue. Please read [https://github.com/Sharkord/sharkord/issues/46](https://github.com/Sharkord/sharkord/issues/46) for more details and possible solutions.
-
-  </AccordionItem>
+<AccordionItem title="I keep getting disconnected from the server">
+  This is most likely a network issue. Please read
+  [https://github.com/Sharkord/sharkord/issues/46](https://github.com/Sharkord/sharkord/issues/46)
+  for more details and possible solutions.
+</AccordionItem>
