chore: update docs

--- a/content/docs/common-questions.mdx
+++ b/content/docs/common-questions.mdx
@@ -61,7 +61,14 @@ icon: Info
   certificates.
 </AccordionItem>
 
-  <AccordionItem title="Is Sharkord vibecoded?">
-    No, Sharkord is not vibecoded. AI is used as a tool to assist in development, documentation and testing, but the core design and implementation decisions are made by the developers. The AI is not responsible for any core aspects of the project.
-  </AccordionItem>
+<AccordionItem title="Is Sharkord vibecoded?">
+  No, Sharkord is not vibecoded. AI is used as a tool to assist in development,
+  documentation and testing, but the core design and implementation decisions
+  are made by the developers. The AI is not responsible for any core aspects of
+  the project.
+</AccordionItem>
+
+<AccordionItem title="How do I reset my server?">
+  To reset your server, delete the data directory. This will remove ALL data. Check the [Data Directory](/docs/data-dir) for the location of the data directory on your system.
+</AccordionItem>
 </Accordion>
