--- a/content/docs/introduction/installation/docker.mdx
+++ b/content/docs/introduction/installation/docker.mdx
@@ -11,7 +11,7 @@ docker run \
   -p 4991:4991/tcp \
   -p 40000:40000/tcp \
   -p 40000:40000/udp \
-  -v ./data:/root/.config/sharkord \
+  -v ./data:/home/sharkord/.config/sharkord \
   --name sharkord \
   sharkord/sharkord:latest
 ```
